--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 # production
 /build
 
-#openAIkey
-/utils/constants.js
 
 # misc
 .DS_Store
@@ -24,3 +22,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.env
+constants.js
