--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "babel-loader": "^9.1.3",
+    "dotenv": "^16.3.1",
     "react-router-dom": "^6.15.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
